# david-a-wheeler.github.io

./: .gitignore  .htaccess  CNAME  aboutsite.html  attic.html  blackout.html  blank_redir.html  contactme.html  debugging-agans.html  dwheeler-oss.html  dwheeler.html  dwheelerbio.html  evaluating_oss.ppt  feature_story-6.html  fosdem-interview.html  frontpage.css  government_oss.ppt  gram.html  index  index.html  index2.html  java-imp.html  misc.html  oss-dod-webinar2008.html  oss_eval.html  oss_fs_curriculum.html  oss_fs_eval.html  oss_fs_refs.html  oss_fs_wh.html  oss_fs_why.html  oss_fs_why.new.html  oss_fs_why_presentation.ppt  oss_fs_why_title.html  oss_security.ppt  oss_security_md.ppt  palm-passwords.html  palm-suggest.html  paper.css  presentations.html  reviews.html  (+9 more)
6502/: FIG6502.ASM  MyFigForthApple2.s.txt  PLAVM.S.txt  a-lang.txt  alang.tar  hyperc-info.txt  index.html  plasma.html  sweet16.txt  ummod.txt  vtech-roms.txt
Accuse.inform/: Metadata.iFiction  Release.blurb  Settings.plist  Skein.skein  manifest.plist  uuid.txt
accuse/: index.html  source.html  source.txt  source_0.html  source_1.html  source_2.html  source_3.html  source_4.html  source_5.html
adventure/: adventure-solution.txt  index.html
advmath/: AdvancedMath-2007.doc  AdvancedMath-2007.odt  AdvancedMath-2008.doc  AdvancedMath-2008.odt  AdvancedMath-2009.odt  AdvancedMath-2010.doc  AdvancedMath-2010.odt  calculus-examples.odt  calculus-test-short.odt  calculus-test.odt  calculus.odt  index.html  lessons102-105.odt  lessons106-109.odt  lessons110-113.odt  lessons114-117.odt  lessons118-121.odt  (+29 more)
encodef/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.in.old  README  aclocal.m4  config.h  config.status  configure  configure.ac  configure.old  decodef  encodef-test  encodef.1  encodef.c  encodef.c.1  evil-filenames-test  gentest  gentest.c  index.html  nul2pfb.c  xargsf
encodef/.deps/: encodef-encodef.Po  encodef.Po
encodef/actual_dir/: results10  results3  results8
encodef/autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
(+2875 files in other folders)
